# cryptor_app

./: .gitignore  README.md  clock_frame.py  main.py  monitor_cookie.py  notebookserver.db  progress.py  pyproject.toml  pyvenv.cfg  requirements.py
app_files/: run_cookie.py  welcome.py
config_files/: ai_texter.py  alert.py  files_list.py  label_frame.py  line_numbers.py  monitor_cookie.py  side_panel.py  styles.py
db/: notebookserver.db
extras/: encryt.py  generate_secrets.py  init_run.py  models.py
src/cryptor_app/: __main__.py  main.py
src/cryptor_app/app_files/: run_cookie.py  welcome.py
src/cryptor_app/config_files/: ai_texter.py  clock_frame.py  custom_modals.py  files_list.py  label_frame.py  line_numbers.py  monitor_cookie.py  progress.py  styles.py
src/cryptor_app/extras/: encryt.py  init_run.py  models.py
src/cryptor_app/tabs/: base_frame_tab.py  sign_in_tab.py  sign_up_tab.py
tabs/: base_frame_tab.py  sign_in_tab.py  sign_up_tab.py
