[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptor-app"
version = "0.1.002"
authors = [
  { name="Mapenzi Mudimba", email="mudimbam@outlook.com" }
]
description = "An offline, zero-trust cryptographic notebook with local async AI utilities."
readme = "README.md"
requires-python = ">=3.11"# 🆕 Add the formal SPDX License Expression here:
license = "GPL-3.0-or-later"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "ollama>=0.2.0",
  "pycryptodome>=3.18.0"
]

[project.urls]
"Homepage" = "https://github.com/mapenzim/cryptor_app"
"Bug Tracker" = "https://github.com/mapenzim/cryptor_app/issues"

[project.scripts]
cryptor-app = "cryptor_app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cryptor_app = ["*.ico"]